--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -29,7 +29,7 @@ h3 {
 }
 
 
-.buttons {
+.button {
     padding: 0.375rem 0.75rem;
     text-align: center;
     vertical-align: middle;
@@ -43,26 +43,26 @@ h3 {
     cursor: pointer;
 }
 
-.buttons:hover {
+.button:hover {
     background-color: #277dde;
     box-shadow: 0px 3px 5px 0px rgb(22, 106, 201), 0px 9px 10px rgba(0, 0, 0, 0.7);
     color: #fff;
 }
 
-.buttons.btn-primary {
+.button.btn-primary {
     color: #fff;
     background-color: rgba(61, 161, 31, 0.76);
     border-color: rgba(61, 161, 31, 0.76);
 
 }
 
-.buttons.btn-primary:hover{
+.button.btn-primary:hover{
     background-color: rgba(42, 134, 12, 0.76);
     border-color: rgba(42, 134, 12, 0.76);
     box-shadow: 0px 3px 5px 0px rgb(21, 86, 18), 0px 9px 10px rgba(0, 0, 0, 0.7);
 }
 
-.buttons.btn-danger{
+.button.btn-danger{
     color: #fff;
     background-color: rgba(255, 0, 102, 0.75);
     border-color:#ff0066;
