--- a/css/popupFormAdd.css
+++ b/css/popupFormAdd.css
@@ -1,91 +1,56 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+.popup_addCourse {
+    position: absolute;
+    display: none;
+    padding: 30px;
+    border-color: white;
+    border-radius: 8px;
     background-color: #FDFF81;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1200 800'%3E%3Cdefs%3E%3CradialGradient id='a' cx='0' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23ffc381'/%3E%3Cstop offset='1' stop-color='%23ffc381' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='b' cx='1200' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%2381ff87'/%3E%3Cstop offset='1' stop-color='%2381ff87' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='c' cx='600' cy='0' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23c780ff'/%3E%3Cstop offset='1' stop-color='%23c780ff' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='d' cx='600' cy='800' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23FDFF81'/%3E%3Cstop offset='1' stop-color='%23FDFF81' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='e' cx='0' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23FF8480'/%3E%3Cstop offset='1' stop-color='%23FF8480' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='f' cx='1200' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%2380F4FF'/%3E%3Cstop offset='1' stop-color='%2380F4FF' stop-opacity='0'/%3E%3C/radialGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='1200' height='800'/%3E%3Crect fill='url(%23b)' width='1200' height='800'/%3E%3Crect fill='url(%23c)' width='1200' height='800'/%3E%3Crect fill='url(%23d)' width='1200' height='800'/%3E%3Crect fill='url(%23e)' width='1200' height='800'/%3E%3Crect fill='url(%23f)' width='1200' height='800'/%3E%3C/svg%3E");
     background-attachment: fixed;
     background-size: cover;
-    font-family: 'Verdana', sans-serif;
+    box-shadow: 0px 3px 5px 0px rgb(255, 255, 255), 0px 9px 10px rgba(0, 0, 0, 0.7);
+    font-weight: bold;
+    z-index: 200;
 }
 
-
-h1 {
-    margin-bottom: 30px;
-    font-size: 37px;
-    color: rgb(255, 255, 255);
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+.form_box {
+    margin: 20px;
 }
 
-h3 {
-    margin-bottom: 30px;
+.form_box input,
+#add_category {
+    display: flex;
+    margin-top: 10px;
+    padding: 13px;
+    border-radius: 7px;
+    width: 300px;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
 
-.button {
-    padding: 0.375rem 0.75rem;
-    text-align: center;
-    vertical-align: middle;
-    white-space: nowrap;
-    border: 1px solid transparent;
-    border-radius: 0.25rem;
-    background-color: #489df8;
-    color: #fff;
-    font-size: 0.75rem;
-    letter-spacing: 0.1em;
+select {
+    padding: 15px;
     cursor: pointer;
 }
 
-.button:hover {
-    background-color: #277dde;
-    box-shadow: 0px 3px 5px 0px rgb(22, 106, 201), 0px 9px 10px rgba(0, 0, 0, 0.7);
-    color: #fff;
-}
-
-.button.btn-primary {
-    color: #fff;
-    background-color: rgba(61, 161, 31, 0.76);
-    border-color: rgba(61, 161, 31, 0.76);
-
-}
-
-.button.btn-primary:hover{
-    background-color: rgba(42, 134, 12, 0.76);
-    border-color: rgba(42, 134, 12, 0.76);
-    box-shadow: 0px 3px 5px 0px rgb(21, 86, 18), 0px 9px 10px rgba(0, 0, 0, 0.7);
-}
-
-.button.btn-danger{
-    color: #fff;
-    background-color: rgba(255, 0, 102, 0.75);
-    border-color:#ff0066;
-}
-
-.add {
-    margin-top: 20px;
-    padding: 0.375rem 0.75rem;
+.create_course {
+    justify-content: center;
     text-align: center;
-    vertical-align: middle;
-    border: 1px solid transparent;
-    border-radius: 0.25rem;
-    background-color: rgba(0, 123, 255, 0.72);
-    font-weight: 400;
-    font-size: 1rem;
-    white-space: nowrap;
-    line-height: 1.5;
-    cursor: pointer;
 }
 
-footer {
+.overlay {
+    display: none;
     position: absolute;
-    margin-bottom: -900px;
-    text-align: center;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(101,101,102,0.89);
+    opacity: 0.8;
     z-index: 100;
 }
+
