--- a/css/popupForm.css
+++ b/css/popupForm.css
@@ -1,4 +1,5 @@
-.popup_addCourse {
+.popup_addCourse,
+.popup_editCourse{
     position: absolute;
     display: none;
     padding: 30px;
@@ -18,7 +19,8 @@
 }
 
 .form_box input,
-#add_category {
+#add_category
+#edit_category{
     display: flex;
     margin-top: 10px;
     padding: 13px;
@@ -33,11 +35,13 @@ input::-webkit-inner-spin-button {
 }
 
 select {
+    border-radius: 7px;
     padding: 15px;
     cursor: pointer;
 }
 
-.create_course {
+.create_course,
+.edit_course {
     justify-content: center;
     text-align: center;
 }
